--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -18,12 +18,15 @@
       @include flexbox(row, stretch, space-between);
     }
     .img-container {
-      width: 49.07%;
-      height: 100%;
+      width: 49.07%; 
+      img{
+       height: 100%;
+       object-fit: cover;
+      }
     }
     .des {
       width: 49.07%;
-      @include flexbox(column, stretch, flex-start);
+      @include flexbox(column, stretch, space-between);
       h3 {
         color: $secondary;
       }
@@ -39,7 +42,7 @@
       p {
         color: $gray;
         flex-grow: 1;
-        :last-child {
+        a {
           display: none;
         }
       }
@@ -55,7 +58,8 @@
   
   @media screen and (max-width: 992px) {
     .posts {
-      h3 {
+      .des{ 
+        h3 {
         font-size: 24px;
       }
       .post-info {
@@ -66,13 +70,14 @@
         font-size: 16px;
       }
       p {
-        :first-child {
+        span {
           display: none;
         }
-        :last-child {
+        a {
           display: initial;
         }
       }
+    }
       a {
         display: none;
       }
