--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,5 +1,5 @@
-<section class="footer">
-    <footer class="container pt-60">
+<footer class="footer pt-60">
+    <div class="container">
       <div class="top">
         <div class="left">
           <ul class="menu d-flex">
@@ -56,8 +56,8 @@
           <a href="#">服務條款</a>
         </div>
       </div>
-    </footer>
-  </section>
+    </div>
+  </footer>
 
 
 
