--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -114,7 +114,7 @@
   }
   .btn {
     width: 416px;
-    padding: 16px 176px;
+    padding: 16px 170px;
     border: none;
     color: $white;
     background-color: $primary;
@@ -191,7 +191,7 @@
       }
       .btn {
         width: 336px;
-        padding: 16px 136px;
+        padding: 16px 130px;
       }
     }
   }
@@ -201,13 +201,15 @@
   .header {
     height: 396px;
     &-text {
+      text-align: center;
       h3 {
-        font-size: 16px;
-      }
-      h2 {
         font-size: 24px;
       }
+      h2 {
+        font-size: 32px;
+      }
       a {
+        padding: 4px 8px;
         margin-top: 8px;
       }
     }
